# chinese-translator

./: .env.example  .gitignore  Makefile  README.md  client.py  generate_dummy.py  index.html  pyproject.toml  server.py  server1.py  test_client.py
