[project]
name = "cindo-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.1",
    "fastapi>=0.136.3",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
